--- a/baselibrary/src/main/res/layout/app_title.xml
+++ b/baselibrary/src/main/res/layout/app_title.xml
@@ -60,6 +60,6 @@
         android:layout_height="2px"
         android:layout_width="match_parent"
         android:background="@color/divider_color"
-        android:visibility="visible"
+        android:visibility="gone"
         />
 </LinearLayout>
