--- a/app/src/main/res/layout/goods_detail_act.xml
+++ b/app/src/main/res/layout/goods_detail_act.xml
@@ -18,7 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/ll_goods_detail_bottom"
+            android:background="@color/bg_color"
             >
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -428,12 +430,14 @@
             android:src="@drawable/goods_back"
             />
         <TextView
+            android:id="@+id/tv_goods_detail_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="¥321312"
             android:textColor="@color/white"
             android:textSize="14sp"
+            android:visibility="gone"
             />
         <LinearLayout
             android:layout_width="wrap_content"
@@ -463,7 +467,6 @@
                     android:layout_height="12dp"
                     android:layout_gravity="right|top"
                     android:layout_marginRight="2dp"
-                    android:layout_marginTop="6dp"
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textSize="7sp"
