--- a/app/src/main/res/layout/lingquan_zhongxin_act.xml
+++ b/app/src/main/res/layout/lingquan_zhongxin_act.xml
@@ -22,6 +22,8 @@
                android:id="@+id/rv_lingquan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
+               android:paddingRight="10dp"
+               android:paddingLeft="10dp"
                >
 
            </android.support.v7.widget.RecyclerView>
