--- a/app/src/main/res/layout/mall_include.xml
+++ b/app/src/main/res/layout/mall_include.xml
@@ -25,6 +25,8 @@
             android:id="@+id/rv_mall_goods_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             >
         </android.support.v7.widget.RecyclerView>
 
